--- a/ansible/templates/docker-compose.yml.j2
+++ b/ansible/templates/docker-compose.yml.j2
@@ -3,9 +3,9 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: {{ POSTGRES_DB }}
-      POSTGRES_PASSWORD: {{ POSTGRES_PASSWORD }}
-      POSTGRES_USER: {{ POSTGRES_USER }}
+      - POSTGRES_DB={{ POSTGRES_DB_VAULT }}
+      - POSTGRES_PASSWORD={{ POSTGRES_PASSWORD }}
+      - POSTGRES_USER={{ POSTGRES_USER }}
     logging:
       driver: 'none'
     restart: unless-stopped
@@ -17,12 +17,12 @@ services:
     depends_on:
       - db
     environment:
-      DB_TYPE: {{ DB_TYPE }}
-      DB_HOST: {{ DB_HOST }}
-      DB_PORT: {{ DB_PORT }}
-      DB_USER: {{ DB_USER }}
-      DB_PASS: {{ DB_PASS }}
-      DB_NAME: {{ DB_NAME }}
+      - DB_TYPE={{ DB_TYPE }}
+      - DB_HOST={{ DB_HOST }}
+      - DB_PORT={{ DB_PORT }}
+      - DB_USER={{ DB_USER }}
+      - DB_PASS={{ DB_PASS }}
+      - DB_NAME={{ DB_NAME }}
     restart: unless-stopped
     ports:
       - '3000:3000'
